--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,10 +1,12 @@
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
+@import 'vars/colors';
+@import 'vars/fonts';
+@import 'vars/index';
+@import 'vars/dimentions';
 
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-}
+@import 'layout/default';
+
+@import 'components/bottombar';
+@import 'components/numbers';
+@import 'components/paginator';
+@import 'components/select-per-page';
+@import 'components/topbar';
