--- a/src/assets/components/_paginator.scss
+++ b/src/assets/components/_paginator.scss
@@ -3,17 +3,15 @@
   justify-content: center;
 
   &__item {
-    text-align: center;
-    color: $black;
-
     background-color: $btn-primary-color;
     border-width: 0;
-    padding: $space-inner;
-    min-width: 36px;
+    color: $black;
+    cursor: pointer;
     margin-left: 4px;
     margin-right: 4px;
-
-    cursor: pointer;
+    min-width: 36px;
+    padding: $space-inner;
+    text-align: center;
 
     &:hover {
       background-color: $btn-primary-color-hover;
@@ -23,12 +21,16 @@
       background-color: $btn-primary-color-active;
     }
 
-    &--actived {
-
+    &--active,
+    &--active:hover {
+      background-color: darken($btn-primary-color-active, 15%);
+      color: $white;
     }
 
-    &--disabled {
-
+    &--disabled,
+    &--disabled:hover {
+      background-color: $primary-color-disabled;
+      color: $text-color-disabled;
     }
   }
 }
