--- a/src/assets/vars/_colors.scss
+++ b/src/assets/vars/_colors.scss
@@ -1,25 +1,25 @@
-$amber-100: #FFECB3;
-$amber-200: #FFE082;
-$amber-300: #FFD54F;
-$amber-400: #FFCA28;
-$amber-500: #FFC107;
-$amber-600: #FFB300;
-$amber-700: #FFA000;
-$amber-800: #FF8F00;
-$amber-900: #FF6F00;
+$amber-100: #ffecb3;
+$amber-200: #ffe082;
+$amber-300: #ffd54f;
+$amber-400: #ffca28;
+$amber-500: #ffc107;
+$amber-600: #ffb300;
+$amber-700: #ffa000;
+$amber-800: #ff8f00;
+$amber-900: #ff6f00;
 
-$gray-100: #F5F5F5;
-$gray-200: #EEEEEE;
-$gray-300: #E0E0E0;
-$gray-400: #BDBDBD;
-$gray-500: #9E9E9E;
+$gray-100: #f5f5f5;
+$gray-200: #eee;
+$gray-300: #e0e0e0;
+$gray-400: #bdbdbd;
+$gray-500: #9e9e9e;
 $gray-600: #757575;
 $gray-700: #616161;
 $gray-800: #424242;
 $gray-900: #212121;
 
-$white: #FFFFFF;
-$black: #000000;
+$white: #fff;
+$black: #000;
 
 $primary-color: $amber-500;
 
@@ -29,6 +29,9 @@ $secondary-color: $gray-900;
 $btn-primary-color: $amber-500;
 $btn-primary-color-hover: $amber-700;
 $btn-primary-color-active: $amber-900;
+
+$primary-color-disabled: $gray-200;
+$text-color-disabled: $gray-900;
 
 $body-bg: $gray-100;
 
