Improving pagination with paginator

--- a/src/assets/components/_paginator.scss
+++ b/src/assets/components/_paginator.scss
@@ -31,6 +31,8 @@
     &--disabled:hover {
       background-color: $primary-color-disabled;
       color: $text-color-disabled;
+
+      cursor: default;
     }
   }
 }
