Fix codeclimate issues

--- a/src/assets/layout/_default.scss
+++ b/src/assets/layout/_default.scss
@@ -19,14 +19,14 @@ body {
 
   &__loader {
     align-items: center;
-    background-color: rgba($white, 0.6);
+    background-color: rgba($white, .6);
     display: none;
     font-size: 44px;
     font-weight: bold;
     height: 100%;
-    left: 0;
     justify-content: center;
-    opacity: 0.8;
+    left: 0;
+    opacity: .8;
     position: absolute;
     top: 0;
     width: 100%;
